[gd_scene load_steps=185 format=2]

[ext_resource path="res://Images/gelato-Sheet-Bubblegum.png" type="Texture" id=1]
[ext_resource path="res://Images/gelato-Sheet-Blueberry.png" type="Texture" id=2]
[ext_resource path="res://Gelato.gd" type="Script" id=3]
[ext_resource path="res://Images/gelato-Sheet-Cherry.png" type="Texture" id=4]
[ext_resource path="res://Images/gelato-Sheet-Chocolate.png" type="Texture" id=5]
[ext_resource path="res://Images/gelato-Sheet-Edamami.png" type="Texture" id=6]
[ext_resource path="res://Images/gelato-Sheet-Pear.png" type="Texture" id=7]
[ext_resource path="res://Images/gelato-Sheet-Jellyfish.png" type="Texture" id=8]
[ext_resource path="res://Images/gelato-Sheet-Vanilla.png" type="Texture" id=9]
[ext_resource path="res://Images/gelato-Sheet-Custard.png" type="Texture" id=10]
[ext_resource path="res://Images/gelato-Sheet-Lemon.png" type="Texture" id=11]
[ext_resource path="res://Images/gelato-Sheet-Mango.png" type="Texture" id=12]
[ext_resource path="res://Images/gelato-Sheet-Strawberry.png" type="Texture" id=13]
[ext_resource path="res://Images/gelato-Sheet-Lime.png" type="Texture" id=14]
[ext_resource path="res://Images/gelato-Sheet-Pumpkin.png" type="Texture" id=15]
[ext_resource path="res://Images/gelato-Sheet-SesameSeed.png" type="Texture" id=16]
[ext_resource path="res://Images/gelato-Sheet-Soda.png" type="Texture" id=17]
[ext_resource path="res://Images/gelato-Sheet-SquidInk.png" type="Texture" id=18]
[ext_resource path="res://Images/gelato-Sheet-Coffee.png" type="Texture" id=19]
[ext_resource path="res://eat_trimmed.mp3" type="AudioStream" id=20]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 19 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 19 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 19 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 19 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 19 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 19 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 19 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 19 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 10 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 8 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 11 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 14 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 14 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 12 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 15 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 15 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 15 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 15 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 15 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 15 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 15 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 16 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 16 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 16 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 16 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 16 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 16 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 16 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 16 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 17 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 17 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 17 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 17 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 17 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 18 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 18 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 18 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 18 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 18 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 18 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 18 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 18 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 13 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 9 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "blueberry",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "bubblegum",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "cherry",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "chocolate",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "coffee",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "custard",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "edamami",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "jellyfish",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "lemon",
"speed": 5.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "lime",
"speed": 5.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ) ],
"loop": true,
"name": "mango",
"speed": 5.0
}, {
"frames": [ SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ) ],
"loop": true,
"name": "pear",
"speed": 5.0
}, {
"frames": [ SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ) ],
"loop": true,
"name": "pumpkin",
"speed": 5.0
}, {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ) ],
"loop": true,
"name": "sesami_seed",
"speed": 5.0
}, {
"frames": [ SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ) ],
"loop": true,
"name": "soda",
"speed": 5.0
}, {
"frames": [ SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ) ],
"loop": true,
"name": "squid_ink",
"speed": 5.0
}, {
"frames": [ SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ) ],
"loop": true,
"name": "strawberry",
"speed": 5.0
}, {
"frames": [ SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ) ],
"loop": true,
"name": "vanilla",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 15, 15 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
input_pickable = true
script = ExtResource( 3 )

[node name="GelatoSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "vanilla"

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 20 )

[node name="eat_noise" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 20 )

[connection signal="input_event" from="KinematicBody2D" to="KinematicBody2D" method="_on_KinematicBody2D_input_event"]
[connection signal="ready" from="KinematicBody2D/GelatoSprite" to="KinematicBody2D" method="_on_GelatoSprite_ready"]
